[package]
name = "airtable-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airtable-api = { git =  "https://github.com/mcassels/cio.git", branch = "airtable-server" }
axum = { version = "0.7.5", features = ["json"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.21"
mini-moka = "0.10.3"
pretty_env_logger = "0.5.0"
serde = "1.0.200"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }
